--- a/public/index.html
+++ b/public/index.html
@@ -3,46 +3,24 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">    <meta name="theme-color" content="#000000">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Zachary Nemeroff</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
-<link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
-<link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
-<link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-
-<script src="%PUBLIC_URL%/js/modernizr.js"></script>
-<title>Sample resume</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/game-board.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/score-board.css">
+    <script src="%PUBLIC_URL%/js/modernizr.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
@@ -51,6 +29,5 @@
     <script src="js/jquery.fittext.js"></script>
     <script src="js/magnific-popup.js"></script>
     <script src="js/init.js"></script>
-
   </body>
 </html>
